--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,7 @@ description: >- # this means to ignore newlines until "baseurl:"
    Smart Nation, Smart DHS 
 baseurl: "/smarticc" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+contact_email: smartnation@dhs.sg
 
 collections: 
   category:
